# PeerModel

./: .gitignore  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  IMPLEMENTATION_CRYPTOSYSTEM_SPEC.md  IMPLEMENTATION_IPFS_PERSISTENCE_SPEC.md  IMPLEMENTATION_MIGRATION_SPEC.md  LICENSE  LICENSE-INTERNATIONAL  Makefile  README.md  environment.yaml  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: test_peermodel.yml
bioconda-recipes/recipes/peermodel/: meta.yaml
cohortcrypto/: __init__.py  cohort.py  envelope.py  exceptions.py  primitives.py  serialization.py  signing.py
cohortcrypto/hardware/: __init__.py  detection.py  interfaces.py  mock.py  piv.py  pkcs11.py
cohortcrypto/tests/: __init__.py  test_ecdh_primitives.py  test_hardware.py  test_hardware_ecdh.py  test_hardware_signing.py  test_issue_4_token_enumeration.py  test_pkcs11_detection.py  test_pkcs11_hardware.py  test_token_interfaces.py
docs/: installation.rst  overview.rst
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
peermodel/: __init__.py  capabilities.py  cli.py  delegation.py  exceptions.py  index.py  iplddict.py  membership.py  migrations.py  operations.py  peermodel.py  primitives.py  repository.py  signing.py  snapshots.py  state.py  sync.py
peermodel-template/: README.md  cookiecutter.json
peermodel-template/{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
peermodel-template/{{cookiecutter.project_slug}}/scripts/: new_migration.py
peermodel-template/{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py  models.py
peermodel-template/{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/migrations/: README.md  __init__.py  registry.py
peermodel/cohortcrypto/: __init__.py  exceptions.py  hardware.py
peermodel/tests/: __init__.py  conftest.py  test_add_member_issue_11.py  test_apply_operation.py  test_cbor_serialization.py  test_cohort_keypair.py  test_cohort_lifecycle.py  test_cohort_record_signing_issue_14.py  test_cohort_repository_issue_28.py  test_cold_start_issue_27.py  test_cookiecutter_migrations_scaffold.py  test_create_cohort_issue_10.py  test_defensive_deserialization.py  test_eager_migration_dryrun.py  test_eager_migration_dryrun_issue_34.py  test_ensure_schema.py  test_expel_member_issue_12.py  test_hardware_interfaces.py  test_incremental_sync_issue_26.py  test_indexed_schema.py  test_lazy_migration_issue_31.py  test_log_traversal.py  test_member_expulsion_issue_12.py  test_migration_registry.py  test_migration_run_cli_issue_36.py  test_migration_status_cli.py  test_node_state.py  test_operation.py  test_operation_record.py  test_peermodel.py  test_primitives_keypair.py  test_query_interface_issue_21.py  test_serialization.py  test_signing_issue_14.py  test_snapshot_creation_issue_22.py  test_snapshot_publish_issue_23.py
peermodel/tests/test_package/migrations/: __init__.py  registry.py
test_package/: __init__.py
test_package/migrations/: __init__.py  registry.py
