[build-system]
requires = ["setuptools>=61.0", "setuptools_scm", "nodeenv"]
build-backend = "setuptools.build_meta"

[project]
name = "peermodel"
authors = [
    {name = "Justin Payne", email = "justin.payne@fda.hhs.gov"},
]
description = "A secure capabilities peer-to-peer ORM built on OrbitDB."
readme = {file = "README.md", content-type="text/markdown"}
requires-python = ">=3.7"
keywords = ["peermodel"]
classifiers = [
        'Natural Language :: English',
        'Programming Language :: Python :: 3.7',
]
dependencies = ["Click ~= 8.1.3",
"cryptography",
"cbor2"
]
dynamic = ["version"]

[project.scripts]
    prmdl = "peermodel.cli:cli"

[project.urls]
Homepage = 'https://github.com/crashfrog/peermodel'
Issues = 'https://github.com/crashfrog/peermodel/issues'

[project.optional-dependencies]
test = ['pytest',
    'pytest-runner',
    'pytest-asyncio',
    'hypothesis'
    ]
dev = [
    'configparser',
    'pytest',
    'hypothesis',
    'black',
    'flake8',
    'sphinx',
    'tox',
    'twine',
    'coverage',
    'zest.releaser',
    "nodeenv ~= 1.8.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = [
    "hardware: marks tests that require real hardware tokens (deselect with '-m \"not hardware\"')",
    "issue_10: marks tests for issue #10 (Cohort creation & initial KeyBundle)",
    "issue_15: marks tests for CBOR serialization feature (issue #15)",
    "issue_20: marks tests for operation application to SQLite index (issue #20)",
    "issue_21: marks tests for IndexDB.query() interface (issue #21)",
    "issue_22: marks tests for snapshot structure & creation (issue #22)",
    "issue_11: marks tests for member enrollment via key encryption (issue #11)",
    "issue_12: marks tests for member expulsion & forward secrecy (issue #12)",
]